[package]
name = "client_encryption_file_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
argon2 = "0.5.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bs58 = "0.5.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
rsa = "0.9.6"